@@ -1,3 +1,7 @@
+2005-03-11  Zoltan Varga  <vargaz@freemail.hu>
+
+	* attribute.cs expression.cs: Get rid of some allocations.
+
 2004-03-11  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* doc.cs : just eliminate the latest change.
